Fixed text-align

--- a/Feedback_release/style.css
+++ b/Feedback_release/style.css
@@ -39,12 +39,20 @@
     transition: all .3s;
 }
 
-.button-group-feedback-release button:hover{
+.button-group-feedback-release button:hover {
     background-color: var(--survey-primary-color);
     color: var(--survey-white-color);
 }
 
-.button-selected{
-    background-color: var(--survey-primary-color)!important;
-    color: var(--survey-white-color)!important;
+.button-selected {
+    background-color: var(--survey-primary-color) !important;
+    color: var(--survey-white-color) !important;
+}
+
+@media only screen and (max-width: 600px) {
+    .container-feedback-release {
+        margin: 10px;
+        padding: 5px;
+        text-align: center;
+    }
 }
